<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_input_options">Input options</string>
    <string name="english_ime_research_log">Research Log Commands</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="general_category">General</string>
    <string name="correction_category">Text correction</string>
    <string name="gesture_typing_category">Gesture typing</string>
    <string name="misc_category">Other options</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_summary">Options for experts</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="sliding_key_input_preview">Show slide indicator</string>
    <string name="sliding_key_input_preview_summary">Display visual cue while sliding from Shift or Symbol keys</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_suggestion_visibility_show_name">Always show</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_name">Show in portrait mode</string>
    <string name="prefs_suggestion_visibility_hide_name">Always hide</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="spoken_use_headphones">Plug in a headset to hear password keys spoken aloud.</string>
    <string name="spoken_current_text_is">Current text is "%s"</string>
    <string name="spoken_no_text_entered">No text entered</string>
    <string name="spoken_auto_correct"><xliff:g id="KEY_NAME" example="Space">%1$s</xliff:g> corrects <xliff:g id="ORIGINAL_WORD">%2$s</xliff:g> to <xliff:g id="CORRECTED_WORD">%3$s</xliff:g></string>
    <string name="spoken_auto_correct_obscured"><xliff:g id="KEY_NAME" example="Space">%1$s</xliff:g> performs auto-correction</string>
    <string name="spoken_description_unknown">Key code %d</string>
    <string name="spoken_description_shift">Shift</string>
    <string name="spoken_description_shift_shifted">Shift on (tap to disable)</string>
    <string name="spoken_description_caps_lock">Caps lock on (tap to disable)</string>
    <string name="spoken_description_delete">Delete</string>
    <string name="spoken_description_to_symbol">Symbols</string>
    <string name="spoken_description_to_alpha">Letters</string>
    <string name="spoken_description_to_numeric">Numbers</string>
    <string name="spoken_description_settings">Settings</string>
    <string name="spoken_description_tab">Tab</string>
    <string name="spoken_description_space">Space</string>
    <string name="spoken_description_mic">Voice input</string>
    <string name="spoken_description_emoji">Emoji</string>
    <string name="spoken_description_return">Return</string>
    <string name="spoken_description_search">Search</string>
    <string name="spoken_description_dot">Dot</string>
    <string name="spoken_description_language_switch">Switch language</string>
    <string name="spoken_description_action_next">Next</string>
    <string name="spoken_description_action_previous">Previous</string>
    <string name="spoken_description_shiftmode_on">Shift enabled</string>
    <string name="spoken_description_shiftmode_locked">Caps lock enabled</string>
    <string name="spoken_description_shiftmode_off">Shift disabled</string>
    <string name="spoken_description_mode_symbol">Symbols mode</string>
    <string name="spoken_description_mode_alpha">Letters mode</string>
    <string name="spoken_description_mode_phone">Phone mode</string>
    <string name="spoken_description_mode_phone_shift">Phone symbols mode</string>
    <string name="announce_keyboard_hidden">Keyboard hidden</string>
    <string name="announce_keyboard_mode">Showing <xliff:g id="KEYBOARD_MODE" example="email">%s</xliff:g> keyboard</string>
    <string name="keyboard_mode_date">date</string>
    <string name="keyboard_mode_date_time">date and time</string>
    <string name="keyboard_mode_email">email</string>
    <string name="keyboard_mode_im">messaging</string>
    <string name="keyboard_mode_number">number</string>
    <string name="keyboard_mode_phone">phone</string>
    <string name="keyboard_mode_text">text</string>
    <string name="keyboard_mode_time">time</string>
    <string name="keyboard_mode_url">URL</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Language &amp; input settings.</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Input languages</string>
    <string name="research_do_not_log_this_session" translatable="false">Suspend logging</string>
    <string name="research_enable_session_logging" translatable="false">Enable logging</string>
    <string name="research_notify_session_log_deleting" translatable="false">Deleting session log</string>
    <string name="research_notify_logging_suspended" translatable="false">Logging temporarily suspended.  To disable permanently, go to Android Keyboard Settings</string>
    <string name="research_notify_session_log_not_deleted" translatable="false">Session log NOT deleted</string>
    <string name="research_notify_session_logging_enabled" translatable="false">Session logging enabled</string>
    <string name="research_feedback_include_history_label" translatable="false">Include session history</string>
    <string name="research_feedback_include_account_name_label" translatable="false">Include account name</string>
    <string name="research_feedback_include_recording_label" translatable="false">Include recorded demonstration</string>
    <string name="research_feedback_send" translatable="false">Send</string>
    <string name="research_feedback_cancel" translatable="false">Cancel</string>
    <string name="research_feedback_demonstration_instructions" translatable="false">Please demonstrate the issue you are writing about.\n\nWhen finished, select the \"Bug?\" button again."</string>
    <string name="send_feedback">Send feedback</string>
    <string name="research_feedback_recording_failure" translatable="false">Recording cancelled due to timeout</string>
    <string name="research_please_exit_feedback_form" translatable="false">Please exit the feedback dialog to access the research log menu</string>
    <string name="research_splash_title" translatable="false">Warning</string>
    <string name="research_logging_disabled" translatable="false">Logging Disabled</string>
    <string name="research_log_uploader_name" translatable="false">Research Uploader Service</string>
    <string name="research_log_replayer_name" translatable="false">Research Replayer Service</string>
    <string name="select_language">Input languages</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="prefs_usability_study_mode">Usability study mode</string>
    <string name="prefs_key_popup_show_up_duration_settings" translatable="false">Key popup show up duration</string>
    <string name="prefs_key_popup_dismiss_duration_settings" translatable="false">Key popup dismiss duration</string>
    <string name="prefs_key_popup_show_up_start_scale_settings" translatable="false">Key popup show up start scale</string>
    <string name="prefs_key_popup_dismiss_end_scale_settings" translatable="false">Key popup dismiss end scale</string>
    <string name="prefs_read_external_dictionary">Read external dictionary file</string>
    <string name="prefs_dump_contacts_dict">Dump contacts dictionary</string>
    <string name="prefs_dump_user_dict">Dump personal dictionary</string>
    <string name="prefs_dump_user_history_dict">Dump user history dictionary</string>
    <string name="prefs_dump_personalization_dict">Dump personalization dictionary</string>
    <string name="setup_step1_bullet" translatable="false">1</string>
    <string name="setup_step2_bullet" translatable="false">2</string>
    <string name="setup_step3_bullet" translatable="false">3</string>
    <string name="cancel">Cancel</string>
    <string name="user_dict_settings_add_dialog_title">Add to dictionary</string>
    <string name="user_dict_settings_add_dialog_confirm">OK</string>
    <string name="user_dict_settings_add_word_hint">Type a word</string>
</resources>