<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2013, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setup_background"
        android:paddingLeft="@dimen/setup_horizontal_padding"
        android:paddingRight="@dimen/setup_horizontal_padding"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/setup_title"
            style="@style/setupTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
        <LinearLayout
            android:id="@+id/setup_step_bullets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setup_title"
            android:paddingTop="16dp"
            android:orientation="horizontal">
            <TextView
                style="@style/setupStepBulletStyle"
                android:text="@string/setup_step1_bullet" />
            <TextView
                style="@style/setupStepBulletStyle"
                android:text="@string/setup_step2_bullet" />
            <TextView
                style="@style/setupStepBulletStyle"
                android:text="@string/setup_step3_bullet" />
        </LinearLayout>
        <com.android.inputmethod.latin.setup.SetupStepIndicatorView
            android:id="@+id/setup_step_indicator"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/setup_step_bullets" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setup_step_indicator">
            <include
                android:id="@+id/setup_step1"
                layout="@layout/setup_step" />
            <include
                android:id="@+id/setup_step2"
                layout="@layout/setup_step" />
            <include
                android:id="@+id/setup_step3"
                layout="@layout/setup_step" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>
